# OSLab5

./: CMakeLists.txt  README.md  config.json  context.md
assets/: asset_loader.js  load_temperature.js  main.html  not_found.html  readings_list.html  style.css
include/: config.h  service.h  service_rpc.h
include/common/: atomic_intrusive_ptr.h  config.h  exception.h  format.h  getopts.h  intrusive_ptr.h  logging.h  periodic_executor.h  public.h  refcounted.h  threadpool.h  weak_ptr.h
include/ipc/: db_client.h  decode_encode.h  serial_port.h  shared_memory.h  subprocess.h
include/rpc/: http_server.h  service_rpc.h
include/subprocess/: subprocess.h
src/: CMakeLists.txt  assets.cpp  config.cpp  main.cpp  service.cpp  service_rpc.cpp  test.cpp
src/common/: CMakeLists.txt  atomic_intrusive_ptr.cpp  config.cpp  exception.cpp  format.cpp  getopts.cpp  intrusive_ptr.cpp  logging.cpp  periodic_executor.cpp  refcounted.cpp  threadpool.cpp  weak_ptr.cpp
src/ipc/: CMakeLists.txt  db_client.cpp  decode_encode.cpp  serial_port.cpp  shared_memory.cpp  subprocess.cpp
src/rpc/: CMakeLists.txt  assets.h  http_server.cpp  service_rpc.cpp
src/service/: config.cpp  config.h  database_storage.cpp  database_storage.h  file_storage.cpp  file_storage.h  main.cpp  service.cpp  service.h  service_rpc.cpp  service_rpc.h  storage.h
src/subprocess/: subprocess.cpp
src/tools/: CMakeLists.txt  simulator.cpp
src/ui/: assets.cpp  assets.h  config.cpp  config.h  main.cpp  service.cpp  service.h  service_rpc.cpp  service_rpc.h
